--- a/src/components/homepage/_styles/homepageStyles.module.scss
+++ b/src/components/homepage/_styles/homepageStyles.module.scss
@@ -392,12 +392,21 @@ $br: 4px;
 
     .tabContent {
         position: relative;
+
+        .loginAlerts {
+            text-align: center;
+            width: 100%;
+            color: #1ab188;
+            font-weight: 600;
+            transition: 800ms all ease;
+            margin-bottom: 30px;
+        }
         
         h1 {
             text-align: center;
             color: $white;
             font-weight: $thin;
-            margin: 0 0 40px;
+            margin: 0 0 20px;
         }
 
         label {
