--- a/src/components/homepage/_styles/homepageStyles.module.scss
+++ b/src/components/homepage/_styles/homepageStyles.module.scss
@@ -4,10 +4,15 @@
 .mainSection {
     background: url('../src/components/homepage/_images/home-main/slider-bg-1.png') no-repeat scroll center center;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
+    padding: 5rem 0;
+
+    @include media-breakpoint-down(md) {
+        padding: 0;
+    }
 
     .mainContainer {
         @include media-breakpoint-down(md) {
@@ -165,11 +170,17 @@
     .footerWidget {
         background: url('../src/components/homepage/_images/home-footer/footer-bg.jpg') no-repeat scroll center center;
         background-size: cover;
-        padding: 130px 0px 115px 0px;
+        padding: 80px 0px 70px 0px;
+
+        @include media-breakpoint-down(md) {
+            padding-top: 75px;
+        }
 
         .footerInnerWidget {
             .fwidget {
-                padding-right: 35px;
+                text-align: center;
+                padding: 0;
+                margin-bottom: 100px;
 
                 img {
                     padding-bottom: 55px;
@@ -209,46 +220,47 @@
 
                 .featuresChart {
                     position: relative;
-                    display: inline-flex;
-                    justify-content: center;
-                    align-items: center;
                     margin: 0;
                     margin-top: 30px;
                     padding: 0;
-                    list-style: none;
+                    height: 175px;
 
-                    li {
-                        font-weight: 300;
-                        height: 200px;
-                        background-position: center 0;
-                        background-repeat: no-repeat;
-                        padding: 0 40px;
+                    @include media-breakpoint-down(md) {
+                        height: 700px;
+                    }
 
-                        span {
+                    .chart {
+                        text-align: center;
+
+                        @include media-breakpoint-down(md) {
+                            margin-bottom: 3rem;
+                        }
+
+                        img {
+                            margin-bottom: 50px;
+                            position: absolute;
+                            top: 0;
+                            left: 50%;
+                            transform: translateX(-50%);
+                        }
+    
+                        p {
+                            position: absolute;
+                            bottom: 0;
+                            left: 50%;
+                            transform: translateX(-50%);
                             font-size: 24px;
                             font-weight: 300;
                             color: #fff;
-                            position: relative;
-                            top: 115px;
                         }
                     }
 
-                    .chartVideo {
-                        background-image: url("../src/components/homepage/_images/home-footer/video.png");
-                    }
-                    .chartVoice {
-                        background-image: url("../src/components/homepage/_images/home-footer/voice.png");
-                    }
-                    .chartHD {
-                        background-image: url("../src/components/homepage/_images/home-footer/hd.jpg");
-                    }
-                    .chartPlus {
-                        display: block;
-                        width: 19px;
-                        height: 18px;
-                        background-size: 19px 18px;
-                        background-image: url("../src/components/homepage/_images/home-footer/plus.png");
-                        margin-top: -80px;
+                    .iconplus {
+                        align-self: center;
+
+                        @include media-breakpoint-down(md) {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -271,6 +283,7 @@
                 -webkit-transition: all 400ms linear 0s;
                 -o-transition: all 400ms linear 0s;
                 transition: all 400ms linear 0s;
+                text-align: center;
 
                 &:hover {
                     color: #fff;
