Fully implemented all basic calling features using socketio. Added friends list. Added password recovery feature. App is ready to be used.

--- a/src/_styles/globalstyles.scss
+++ b/src/_styles/globalstyles.scss
@@ -7,6 +7,7 @@ $white: #fff;
 $black: #000000;
 $darken: #232931;
 $blue: #3396ff;
+$purple: rgb(155, 95, 196);
 
 $primary: #78C2AD;
 $secondary: #a0f669;
