--- a/public/main.css
+++ b/public/main.css
@@ -2830,15 +2830,22 @@ html {
       margin-bottom: 40px; }
     ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._2gxh84_pdAK3ktycqdWW4O ._3CB04DOmeJg6nJW61AAEDJ {
       width: 100% !important; }
-    ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._2gxh84_pdAK3ktycqdWW4O ._1tY6Sh2oZ0UuzOSdzb_YyM {
-      margin-top: -20px;
-      text-align: right; }
     ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._2gxh84_pdAK3ktycqdWW4O > div {
       float: left;
       width: 50%; }
       ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._2gxh84_pdAK3ktycqdWW4O > div:first-child {
         width: 46%;
         margin-right: 4%; }
+    ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._1tY6Sh2oZ0UuzOSdzb_YyM {
+      margin-top: -20px;
+      text-align: right; }
+      ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._1tY6Sh2oZ0UuzOSdzb_YyM span {
+        text-decoration: none;
+        color: #1ab188;
+        transition: .5s ease;
+        cursor: pointer; }
+        ._3tARxS1P09M1PzQTi2rdul ._11BWjXsQdQ7pD2Tt-e95Lh ._1tY6Sh2oZ0UuzOSdzb_YyM span:hover {
+          color: #179b77; }
 
 /*!
  * Bootstrap Grid v4.2.1 (https://getbootstrap.com/)
@@ -5312,22 +5319,68 @@ html {
 /* Bootstrap Toggle v2.2.2 corrections for Bootsrtap 4*/
 ._24Nx707g9-YJS8SMeu-xHB {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
   background: url("../src/components/homepage/_images/home-main/slider-bg-1.png") no-repeat scroll center center;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5rem; }
+  padding: 5rem;
+  overflow: hidden; }
   @media (max-width: 991.98px) {
     ._24Nx707g9-YJS8SMeu-xHB {
-      padding: 1rem 0; } }
+      padding: 1rem 0;
+      overflow-y: scroll; } }
   ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw {
     align-items: center;
     justify-content: center;
     text-align: center;
     width: 100%; }
+    ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._1vJIIMyV8EcUSFmksLJkIY {
+      color: #fff;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 45px;
+      margin: 0 0 2em;
+      max-width: 160px;
+      position: relative;
+      text-decoration: none;
+      text-transform: uppercase;
+      width: 100%;
+      border: 1px solid;
+      overflow: hidden;
+      position: relative;
+      transition: .6s all ease;
+      text-transform: uppercase;
+      border-radius: 1rem;
+      background: rgba(255, 255, 255, 0);
+      border-bottom: 1px solid;
+      color: #fff;
+      line-height: 1.4;
+      padding: .5rem;
+      text-decoration: none; }
+      ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._1vJIIMyV8EcUSFmksLJkIY span {
+        z-index: 20; }
+      ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._1vJIIMyV8EcUSFmksLJkIY:after {
+        background: #fff;
+        content: "";
+        height: 155px;
+        left: -75px;
+        opacity: .2;
+        position: absolute;
+        top: -50px;
+        transform: rotate(35deg);
+        transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+        width: 50px;
+        z-index: -10; }
+      ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._1vJIIMyV8EcUSFmksLJkIY:hover {
+        background: #dbdbdb;
+        color: #E1332D; }
+        ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._1vJIIMyV8EcUSFmksLJkIY:hover:after {
+          left: 120%;
+          transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1); }
     ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol {
       margin: 0;
       padding: 0;
@@ -5384,7 +5437,8 @@ html {
           font-size: 13px;
           height: 88%;
           padding: 0;
-          margin: 0; }
+          margin: 0;
+          overflow-y: scroll; }
           ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol .falGH2yaoFV3nfjI6Kfpy ._1oM2cMAXZhTAR6fU3NHiJA li {
             display: flex;
             margin: 0 0 10px 10px;
@@ -5436,31 +5490,61 @@ html {
             ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 {
               width: 350px;
               height: 280px; } }
-          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 p {
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: darkgrey; }
-          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 i {
-            position: absolute;
-            top: 80%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #c2c2c2;
-            background-color: #bb1414;
-            border-radius: 50%;
-            padding: 1rem;
-            cursor: pointer; }
-          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 img {
+          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2qLAA0t1deOo4MFZxzduH4 {
             position: absolute;
             top: 40%;
             left: 50%;
-            width: 264px;
-            background-color: #00d9ffab;
-            border-radius: 1rem;
-            padding: 0 2rem;
-            height: 250px;
+            transform: translate(-50%, -50%);
+            width: 100%; }
+            ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2qLAA0t1deOo4MFZxzduH4 p {
+              text-align: center;
+              color: darkgrey;
+              width: 100%; }
+          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._3TfbymgJm3jpcOhQCKLpN_ {
+            position: absolute;
+            width: 100%;
+            top: 80%;
+            left: 50%;
             transform: translate(-50%, -50%); }
+            @media (max-width: 991.98px) {
+              ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._3TfbymgJm3jpcOhQCKLpN_ {
+                top: 85%; } }
+            ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._3TfbymgJm3jpcOhQCKLpN_ ._3vD6p4YMrHwVHbvoBjgEZt {
+              color: #c2c2c2;
+              background-color: #bb1414;
+              border-radius: 50%;
+              padding: 1rem;
+              cursor: pointer; }
+            ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._3TfbymgJm3jpcOhQCKLpN_ .rouBNujgzaNjoGB5YZWjr {
+              color: #c2c2c2;
+              background-color: #0bb30b;
+              border-radius: 50%;
+              padding: 1rem;
+              margin: 0 2rem;
+              cursor: pointer; }
+            ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._3TfbymgJm3jpcOhQCKLpN_ ._1kfFShNrzbnIVg98BubMFQ {
+              color: #c2c2c2;
+              background-color: #bb1414;
+              border-radius: 50%;
+              padding: 1rem;
+              margin: 0 2rem;
+              cursor: pointer; }
+          ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2sPIZD66TJwjkg6Ve3e_94 {
+            height: 250px;
+            margin-bottom: 1rem; }
+            @media (max-width: 991.98px) {
+              ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2sPIZD66TJwjkg6Ve3e_94 {
+                height: 150px; } }
+            ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2sPIZD66TJwjkg6Ve3e_94 img {
+              position: absolute;
+              top: 40%;
+              left: 50%;
+              background-color: #00d9ffab;
+              border-radius: 1rem;
+              padding: 0 2rem;
+              height: 250px;
+              transform: translate(-50%, -50%); }
+              @media (max-width: 991.98px) {
+                ._24Nx707g9-YJS8SMeu-xHB .C8V2JaYh7ntymXek-GXHw ._2Am3FjVwhDGOyeZ_abw8Ol ._35GkHqNDwpqrQzjURo48bN ._2Nxfn33KsH8YBew2BWd0h2 ._2sPIZD66TJwjkg6Ve3e_94 img {
+                  height: 150px; } }
 
