--- a/src/components/dashboard/_styles/dashboardStyles.module.scss
+++ b/src/components/dashboard/_styles/dashboardStyles.module.scss
@@ -3,7 +3,7 @@
 
 .dashContainer {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
     background: url('../src/components/homepage/_images/home-main/slider-bg-1.png') no-repeat scroll center center;
     background-size: cover;
@@ -11,9 +11,11 @@
     align-items: center;
     justify-content: center;
     padding: 5rem;
+    overflow: hidden;
 
     @include media-breakpoint-down(md) {
         padding: 1rem 0;
+        overflow-y: scroll;
     }
 
     .dashRow {
@@ -21,6 +23,63 @@
         justify-content: center;
         text-align: center;
         width: 100%;
+
+        
+        .logoutBtn {
+            color: #fff;
+            cursor: pointer;
+            // display: block;
+            font-size:16px;
+            font-weight: 400;
+            line-height: 45px;
+            margin: 0 0 2em;
+            max-width: 160px; 
+            position: relative;
+            text-decoration: none;
+            text-transform: uppercase;
+            width: 100%; 
+            border: 1px solid;
+            overflow: hidden;
+            position: relative;
+            transition: .6s all ease;
+            text-transform: uppercase;
+            border-radius: 1rem;
+
+            background: rgba(#fff, 0);
+            border-bottom: 1px solid;
+            color: $white;
+            line-height: 1.4;
+            padding: .5rem;
+            text-decoration: none;
+            
+            span {
+                z-index: 20;
+            }
+            
+            &:after {
+                background: #fff;
+                content: "";
+                height: 155px;
+                left: -75px;
+                opacity: .2;
+                position: absolute;
+                top: -50px;
+                transform: rotate(35deg);
+                transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+                width: 50px;
+                z-index: -10;
+            }
+
+            &:hover {
+                background: rgba(rgb(219, 219, 219), 1);
+                color: #E1332D;
+
+                &:after {
+                    left: 120%;
+                    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+                }
+            }
+        }
 
         .dashCol {
             margin: 0;
@@ -91,6 +150,7 @@
                     height: 88%;
                     padding: 0;
                     margin: 0;
+                    overflow-y: scroll;
                     
                     li {
                         display: flex;
@@ -165,37 +225,80 @@
                         height: 280px;
                     }
 
-                    p {
-                        text-align: center;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        color: darkgrey;
-                    }
-
-                    i {
-                        position: absolute;
-                        top: 80%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        color: #c2c2c2;
-                        background-color: #bb1414;
-                        border-radius: 50%;
-                        padding: 1rem;
-                        cursor: pointer;
-                    }
-
-                    img {
+                    .callingGIF {
                         position: absolute;
                         top: 40%;
                         left: 50%;
-                        width: 264px;
-                        background-color: #00d9ffab;
-                        border-radius: 1rem;
-                        padding: 0 2rem;
-                        height: 250px;
                         transform: translate(-50%, -50%);
+                        width: 100%;
+
+                        p {
+                            text-align: center;
+                            color: darkgrey;
+                            width: 100%;
+                        }
+                    }
+
+                    .callingIcons {
+                        position: absolute;
+                        width: 100%;
+                        top: 80%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+
+                        @include media-breakpoint-down(md) {
+                            top: 85%;
+                        }
+                        
+                        .callIcon {
+                            color: #c2c2c2;
+                            background-color: #bb1414;
+                            border-radius: 50%;
+                            padding: 1rem;
+                            cursor: pointer;
+                        }
+
+                        .callIcon1 {
+                            color: #c2c2c2;
+                            background-color: #0bb30b;
+                            border-radius: 50%;
+                            padding: 1rem;
+                            margin: 0 2rem;
+                            cursor: pointer;
+                        }
+    
+                        .callIcon2 {
+                            color: #c2c2c2;
+                            background-color: #bb1414;
+                            border-radius: 50%;
+                            padding: 1rem;
+                            margin: 0 2rem;
+                            cursor: pointer;
+                        }
+                    }
+
+                    .imgWrapper {
+                        height: 250px;
+                        margin-bottom: 1rem;
+
+                        @include media-breakpoint-down(md) {
+                            height: 150px;
+                        }
+
+                        img {
+                            position: absolute;
+                            top: 40%;
+                            left: 50%;
+                            background-color: #00d9ffab;
+                            border-radius: 1rem;
+                            padding: 0 2rem;
+                            height: 250px;
+                            transform: translate(-50%, -50%);
+    
+                            @include media-breakpoint-down(md) {
+                                height: 150px;
+                            }
+                        }
                     }
                 }
             }
